--- a/PROJECTS/mugcard/mugcard.css
+++ b/PROJECTS/mugcard/mugcard.css
@@ -98,3 +98,30 @@ section {
 .btnText{
     color: #fff;
 }
+
+.price-box {
+  font-family: Arial, sans-serif;
+}
+
+.discount {
+  color: red;
+  font-size: 1.2rem;
+  margin-right: 5px;
+}
+
+.price {
+  font-size: 2rem;
+  font-weight: bold;
+  color: black;
+}
+
+.mrp {
+  display: block;
+  font-size: 0.9rem;
+  color: #666;
+  margin-top: 5px;
+}
+
+.mrp span {
+  text-decoration: line-through;
+}
